--- a/style.css
+++ b/style.css
@@ -55,6 +55,21 @@ button:hover {
 .caixa-resultado.mostrar{
     display: block;
 }
+const botaoIniciar = document.querySelector(".iniciar-btn");
+const telaInicial = document.querySelector(".tela-inicial");
+botaoIniciar.addEventListener('click', iniciaJogo);
+function iniciaJogo() {
+        atual = 0;
+        historiaFinal = "";
+        telaInicial.style.display = 'none';
+        caixaPerguntas.classList.remove("mostrar");
+        caixaAlternativas.classList.remove("mostrar");
+        caixaResultado.classList.remove("mostrar");
+        mostraPergunta();
+}
+    substituiNome();
+// removemos o mostraPergunta();
+
 
 .caixa-alternativas{
     display: flex;
